# nuremberg-future-land-cover-prediticion

./: README.md  benchmark_2020_2021.ipynb  benchmark_delta.ipynb  benchmark_stacking_2020_2021.ipynb  benchmark_stacking_delta.ipynb  pyproject.toml
analysis/: analysis_classification.ipynb  analysis_delta.ipynb  analysis_shap.ipynb  analysis_shap_stacking.ipynb  analysis_stress.ipynb  analysis_stress.txt
baseline/: baseline.ipynb  benchmark_stacking_all_labels.txt  eda.ipynb  features.txt  multioutput_baseline.ipynb  stacking_all_labels.ipynb  stacking_model.ipynb
baseline-dataset-prep/: Baseline_Dataset_Preparation.ipynb  requirements.txt
benchmark/: benchmark_2020_2021.ipynb  benchmark_delta.ipynb  benchmark_stacking_delta.ipynb
benchmarks/: benchmark_all_labels.ipynb  benchmark_all_labels.txt  benchmark_less_label.ipynb  benchmark_less_labels.txt
dashboard/: .gitattributes  app.py  dink.ipynb  multioutput_baseline_1.ipynb
dashboard/assets/: nuremberg_borough_boundaries.geojson
dashboard/data_3x3/: delta_table_2021_3x3.parquet
data_extraction/: data_extraction.js
docs/report/: custom.bib  main.tex  refs.bib  temp.tex
hyperparam_tuning/: minimize_overfit.ipynb  minimize_testRMSE.ipynb
less_labels/: less_label.ipynb  stacking_less_labels.ipynb
stacking/: benchmark.txt  stacking_model.ipynb
