[project]
name = "machine-learning-final-project-ws2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.9.0",
    "h3>=4.4.2",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"