[project]
name = "machine-learning-final-project-ws2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "gradio>=6.9.0",
    "h3>=4.4.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "shapely>=2.1.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
